--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1>Congratulations!!! </h1>
       <h2>Welcome to CICD PIPELINE| TY-75</h2>
       <h3>This application was deployed</h3>
-      <p>Presentation link: <a href="https://www.canva.com/design/DAGBbZx_KCQ/OZU_LfhXkQufDAJHalolGg/edit?utm_content=DAGBbZx_KCQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"> PreLink </a></p>
+      <p>SORRY link: <a href="https://www.canva.com/design/DAGBbZx_KCQ/OZU_LfhXkQufDAJHalolGg/edit?utm_content=DAGBbZx_KCQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"> PreLink </a></p>
   </div>
 </body>
 </html>
