--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>Welcome to CICD PIPELINE| TY-75</h2>
       <h3>This application was deployed</h3>
       <p>PPT link: <a href="https://www.canva.com/design/DAF_Yln9hCM/kCOt8UuWnYg8MzJUGZ8jsA/edit?utm_content=DAF_Yln9hCM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"> PreLink </a></p>
-      <p> Hello We are in the meeting abc</p>
+      <p> Hello We are in the meeting Ashok</p>
     </div>
 </body>
 </html>
