--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <img src="https://s3.ap-south-1.amazonaws.com/www.basava.com/aar_logo_final.png" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
-      <h2>Welcome to CICD PIPELINE| TY-75</h2>
+      <h2>Welcome to CICD PIPELINE| TY-75 | CS-D</h2>
       <h3>This application was deployed</h3>
       <p>PPT link: <a href="https://www.canva.com/design/DAF_Yln9hCM/kCOt8UuWnYg8MzJUGZ8jsA/edit?utm_content=DAF_Yln9hCM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank"> PreLink </a></p>
       <p> Hello We are in the meeting Ashok</p>
