--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ nav .btn {
                 <div class="content">
                     <div class="name">Glacier</div>
                     <div class="des">
-                        Amazon Glacier is a highly durable and secure online backup and archiving service that stores data in archives and vaults, allowing users to store large amounts of data affordably and retrieve it when needed.
+                        Amazon Glacier is a highly durable and  online backup and archiving service that stores data in archives and vaults, allowing users to store large amounts of data affordably and retrieve it when needed.
                     </div>
                     <button class="seeMore">See More</button>
                 </div>
