--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ nav .btn {
         
     </div>
     <footer style="text-align: center; padding: 10px; background-color: #f1f1f1; position: fixed; left: 0; bottom: 0; width: 100%;">
-        ©2024 Designed and Developed By Vedant Sawant ; Dhanashri Sonawane ; Sahil Shirodkar & Tejas Thakur. All rights reserved.
+        ©2024 Designed with love and Developed By Vedant Sawant ; Dhanashri Sonawane ; Sahil Shirodkar & Tejas Thakur. All rights reserved.
       </footer>
 </body>
 
