--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ nav .btn {
 
 <body>
     <nav class="flex align-center">
-        <p><span>Automated pipeline </span>integration using AWS</p>
+        <p><span>Automated pipeline </span>integration using AWS VIT</p>
         <ul>
           <li class="big-screens">
             <button class="btn register" onclick="window.location.href='https://www.canva.com/design/DAF_Yln9hCM/kCOt8UuWnYg8MzJUGZ8jsA/edit?utm_content=DAF_Yln9hCM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton'">Presentation</button>
